# DS_HW1

./: Auxiliaries.h  AvlTree.h  CMakeLists.txt  CoursesManager.cpp  CoursesManager.h  Exceptions.cpp  Exceptions.h  List.h  avl.h  library.cpp  library.h  main.cpp  temp.cpp
design/: CoursesManager  dry.docx
tests/: AVLTreeTest.cpp
